test/runtime/fail/test.hy

// expect error: Expected string or `\(` after `import`, found end of file

import
